Separate optimizer responsibilities
Split the optimizer coordinator into focused greedy, beam, requirement, refinement, maximization, neighborhood, evaluation, mapping, validation, and summary components. Preserve the public service contract while reducing the main implementation from 1052 to 150 lines and centralizing slot copying.

Validation: 71 backend tests, realistic exhaustive benchmark with equal heuristic and exact utility, and performance benchmark.